fix for email user

--- a/templates/app.ini
+++ b/templates/app.ini
@@ -44,7 +44,7 @@ PASSWORD_HASH_ALGO = pbkdf2
 ENABLED = true
 HOST    = {{pac}}.hostsharing.net:25
 FROM    = no-reply@{{domain}}
-USER    = {{pac}}_{{user}}
+USER    = {{pac}}-{{user}}
 PASSWD  = {{password}}
 
 [service]
