support custom domain
write to log files

--- a/templates/app.ini
+++ b/templates/app.ini
@@ -23,7 +23,7 @@ SSH_DOMAIN       = {{domain}}
 DOMAIN           = {{domain}}
 HTTP_ADDR        = localhost
 HTTP_PORT        = {{gitea_port}}
-ROOT_URL         = https://{{domain}}/
+ROOT_URL         = https://{{custom_domain}}/
 DISABLE_SSH      = false
 SSH_PORT         = 22
 LFS_START_SERVER = true
@@ -45,7 +45,7 @@ ENABLED = true
 HOST    = {{pac}}.hostsharing.net:25
 FROM    = no-reply@{{domain}}
 USER    = {{pac}}-{{user}}
-PASSWD  = {{password}}
+PASSWD  = `{{password}}`
 
 [service]
 REGISTER_EMAIL_CONFIRM            = true
@@ -71,7 +71,7 @@ ENABLE_OPENID_SIGNUP = false
 PROVIDER = file
 
 [log]
-MODE      = console
+MODE      = file
 LEVEL     = info
 ROOT_PATH = /home/pacs/{{pac}}/users/{{user}}/var/log
-ROUTER    = console
+ROUTER    = file
