use custom domain in app.ini

--- a/templates/app.ini
+++ b/templates/app.ini
@@ -19,8 +19,8 @@ ROOT = /home/pacs/{{pac}}/users/{{user}}/repos
 
 [server]
 PROTOCOL         = http
-SSH_DOMAIN       = {{domain}}
-DOMAIN           = {{domain}}
+SSH_DOMAIN       = {{custom_domain}}
+DOMAIN           = {{custom_domain}}
 HTTP_ADDR        = localhost
 HTTP_PORT        = {{gitea_port}}
 ROOT_URL         = https://{{custom_domain}}/
@@ -43,7 +43,7 @@ PASSWORD_HASH_ALGO = pbkdf2
 [mailer]
 ENABLED = true
 HOST    = {{pac}}.hostsharing.net:25
-FROM    = no-reply@{{domain}}
+FROM    = no-reply@{{custom_domain}}
 USER    = {{pac}}-{{user}}
 PASSWD  = `{{password}}`
 
