--- a/playbook-install.yml
+++ b/playbook-install.yml
@@ -69,6 +69,7 @@
     become_user: "{{pac}}-{{user}}"
     shell: |
       wget --no-verbose -O gitea https://dl.gitea.io/gitea/{{gitea_release}}/gitea-{{gitea_release}}-linux-amd64 || exit -1
+      # wget --no-verbose -O gitea https://proxy.solidcharity.com/index.php?file=gitea-{{gitea_release}}-linux-amd64 || exit -1
       wget --no-verbose https://dl.gitea.io/gitea/{{gitea_release}}/gitea-{{gitea_release}}-linux-amd64.asc || exit -1
       chmod +x gitea || exit -1
       gpg --verify gitea-{{gitea_release}}-linux-amd64.asc gitea || (rm -f gitea-{{gitea_release}}-linux-amd64.asc gitea && exit -1)
