optionally download the gitea binary from my proxy

--- a/inventory-template.yml
+++ b/inventory-template.yml
@@ -26,3 +26,5 @@ gitea:
 
       SaasActivationPassword: {{SaasActivationPassword}}
       SaasInstanceStatus: {{SaasInstanceStatus}}
+
+      url_proxy: https://proxy.solidcharity.com
