fix mailer settings

--- a/templates/app.ini
+++ b/templates/app.ini
@@ -41,11 +41,14 @@ SECRET_KEY         = {{secret_key}}
 PASSWORD_HASH_ALGO = pbkdf2
 
 [mailer]
-ENABLED = true
-HOST    = {{pac}}.hostsharing.net:25
-FROM    = no-reply@{{custom_domain}}
-USER    = {{pac}}-{{user}}
-PASSWD  = `{{password}}`
+ENABLED        = true
+SMTP_ADDR      = {{pac}}.hostsharing.net
+SMTP_PORT      = 465
+IS_TLS_ENABLED = true
+MAILER_TYPE    = smtp
+FROM           = no-reply@{{custom_domain}}
+USER           = {{pac}}-{{user}}
+PASSWD         = `{{password}}`
 
 [service]
 REGISTER_EMAIL_CONFIRM            = true
