--- a/templates/app.ini
+++ b/templates/app.ini
@@ -56,7 +56,7 @@ ENABLE_NOTIFY_MAIL                = true
 DISABLE_REGISTRATION              = true
 ALLOW_ONLY_EXTERNAL_REGISTRATION  = false
 ENABLE_CAPTCHA                    = false
-REQUIRE_SIGNIN_VIEW               = true
+REQUIRE_SIGNIN_VIEW               = false
 DEFAULT_KEEP_EMAIL_PRIVATE        = false
 DEFAULT_ALLOW_CREATE_ORGANIZATION = false
 DEFAULT_ENABLE_TIMETRACKING       = false
