--- a/templates/app.ini
+++ b/templates/app.ini
@@ -27,17 +27,17 @@ ROOT_URL         = https://{{custom_domain}}/
 DISABLE_SSH      = false
 SSH_PORT         = 22
 LFS_START_SERVER = true
-LFS_JWT_SECRET   = {{lfs_jwt_secret}}
+LFS_JWT_SECRET   = WILL_BE_GENERATED
 LFS_CONTENT_PATH = /home/pacs/{{pac}}/users/{{user}}/data/lfs
 OFFLINE_MODE     = false
 
 [oauth2]
-JWT_SECRET = {{jwt_secret}}
+JWT_SECRET = WILL_BE_GENERATED
 
 [security]
-INTERNAL_TOKEN     = {{internal_token}}
+INTERNAL_TOKEN     = WILL_BE_GENERATED
 INSTALL_LOCK       = true
-SECRET_KEY         = {{secret_key}}
+SECRET_KEY         = WILL_BE_GENERATED
 PASSWORD_HASH_ALGO = pbkdf2
 
 [mailer]
